# Shuhai

./: .gitignore  CMakeLists.txt  README.md
cpu_benchmark/: CMakeLists.txt  latency_huge_table.cpp  throughput.cpp
driver/: README.md
gpu_benchmark/: global_TH.cu  global_latency.cu
hw/: README.md
hw/constraints/: u280_ddr.xdc  u280_hbm.xdc  virtex7_ddr.xdc
hw/rtl/u280_ddr/: hbm_bench.vh  hbm_benchmark.sv  lt_engine.sv  rd_engine.sv  wr_engine.sv  xdma_app.v  xdma_control.sv
hw/rtl/u280_hbm/: hbm_bench.vh  hbm_benchmark.sv  rd_engine.sv  wr_engine.sv  xdma_app.v  xdma_control.sv
hw/rtl/virtex7_ddr/: hbm_bench.vh  hbm_benchmark.sv  lt_engine.sv  rd_engine.sv  wr_engine.sv  xdma_control.sv
hw/scripts/: create_hbm_RBC.tcl  create_hbm_RCB.tcl  create_prj.tcl.in  generate_bitstream.tcl.in  run_synthesis.tcl.in
rtl/u280_ddr/: hbm_benchmark.sv  xdma_control.sv
rtl/u280_hbm/: xdma_app.v
scripts/: create_hbm_BRC.tcl  create_hbm_BRGCG.tcl  create_hbm_DEFAULT.tcl  run_implementation.tcl.in
sw/: README.md
sw/driver/: README.md  xdma_driver.c
sw/src/: CMakeLists.txt  config.txt  config1.txt  config2.txt  ddr_test.cpp  hbm_test.cpp
sw/src/fpga/: Configuration.h  Fpga.cpp  Fpga.h  FpgaController.cpp  FpgaController.h
sw/src/test/: getNum.py  main.py
